GNED not compatible with new Tkenv mode of using "i=" and "b=" together
new Tkenv display string tags not supported yet
internally, images must be named with "img:" prefix! (otherwise exit.gif, 
proc.gif etc will overwrite the exit, proc Tcl commands!)

2004-02-11  Andras Varga

	* fixed bug that caused Tk error when a display string contains
	a paremeter reference, e.g. "o=$color"

2004-02-04  ------ omnetpp-3.0pre1 released ------

2004-02-03  Andras Varga

	* nedfile.cc fixes

2003-11-29  Andras Varga

	* widgets.tcl: added BLT support

	* gned.cc, tklib.cc, tkcmd.cc reorganized

2003-11-24  Andras Varga

	* added Back and Forward toolbar icons; added "New component" toolbar
	icon; improved icon selection dialog; etc.

2003-10-24  Andras Varga

	* usability improvements (tooltips wording change, some icons 
	redesigned, opens Properties dialog when creating new simple module, 
	import, network, etc.)

2003-09-08  Andras Varga

	* bugfix: textedits were not saved until you switched back to graphics
	mode

2003-09-04  Andras Varga

	* implemented "Consult module declaration" button

2003-09-02  Andras Varga

	* canvas.tcl, main.tcl: GUI layout rearranged a bit for usability 
	reasons

	* plotedit.tcl: cursor changes over canvas items

2003-09-01  Andras Varga

	* canvas.tcl, widgets.tcl: turned on Undo/Redo feature in editor
	also added to Edit menu and toolbar. Requires fairly recent Tcl/Tk.

2003-08-12  Andras Varga

	* combobox.tcl: on FocusOut event, it always restored the old content
	of the entry, so it wasn't possible to type something that was not
	in the list

2003-08-12  Andras Varga
	
	* enhancement: in Submodule and Network Properties dialogs, choose 
	module list from combobox.
	
	* enhancement: in Connection Properties dialogs, module and gate 
	can be selected from combo, and channel also. Input is also fully 
	validated. 

2003-08-11  Andras Varga

	* bugfix: using the Module/Submodule/Connection/Network/Channel/... 